--- a/river_phenology.html
+++ b/river_phenology.html
@@ -1506,7 +1506,10 @@ where these shifts are happening.</p>
 <h2>Area of Interest</h2>
 <p>For this study, we’re interested in exploring plant phenology near
 the Santa Clara River which flows from Santa Clarita, CA and Ventura,
-CA.</p>
+CA. It is the last major coastal system within Southern California that
+has been relatively unchanged by development and supports over 17
+species. The Santa Clara River is also supportive of one of the most
+valuable agricultural in the world<a href="http://rivrlab.msi.ucsb.edu/santa-clara-river">1</a>.</p>
 </div>
 </div>
 <div id="purpose-of-study" class="section level1">
@@ -1756,11 +1759,22 @@ winter and gain them back during the Spring.</p>
 <h1>Conclusion</h1>
 <p>From the data available, we can see that in 2019, NDVI values as of
 July were above NDVI values for the following year. This could be due to
-longer periods of rain, longer periods of warm weather, or other climate
-related factors, which would be worth investigating for future study.
-While none of the study sites experienced extreme deviations expected
-NDVI from 2018-2019, the shift in their seasonal productivity cycle is
-present as indicated by the plot above.</p>
+longer periods of rain<a href="https://www.latimes.com/california/story/2019-12-31/southern-california-precipitation-above-normal-year-end">3</a>,
+longer periods of warm weather, or other climate related factors, which
+would be worth investigating for future study. While none of the study
+sites experienced extreme deviations expected NDVI from 2018-2019, the
+shift in their seasonal productivity cycle is present as indicated by
+the plot above.</p>
+</div>
+<div id="references" class="section level1">
+<h1>References</h1>
+<p>Duginski, P. (2020, January 1). <em>At Year’s End, Southern
+California’s precipitation remains above normal</em>. Los Angeles Times.
+<a href="https://www.latimes.com/california/story/2019-12-31/southern-california-precipitation-above-normal-year-end" class="uri">https://www.latimes.com/california/story/2019-12-31/southern-california-precipitation-above-normal-year-end</a></p>
+<p><em>Normalized difference vegetation index (NDVI)</em>. International
+Production Assessment Division (IPAD) - Home Page. (n.d.). <a href="https://ipad.fas.usda.gov/cropexplorer/Definitions/spotveg.htm" class="uri">https://ipad.fas.usda.gov/cropexplorer/Definitions/spotveg.htm</a></p>
+<p><em>Santa Clara River Research and Restoration</em>.
+Rivrlab.msi.ucsb.edu. (n.d.). <a href="http://rivrlab.msi.ucsb.edu/santa-clara-river" class="uri">http://rivrlab.msi.ucsb.edu/santa-clara-river</a></p>
 </div>
 
 
